--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,7 +6,6 @@ on:
     paths:
       - 'api/**'
       - 'web/**'
-      - '.github/workflows/build.yaml'
     tags:
       - 'v*'
   workflow_dispatch:
@@ -31,7 +30,7 @@ jobs:
             dockerfile: api/ai/Dockerfile
             image: ghcr.io/${{ github.repository_owner }}/slar-ai
           - name: api
-            context: api
+            context: .
             dockerfile: api/Dockerfile
             image: ghcr.io/${{ github.repository_owner }}/slar-api
           - name: workers
